bin/tests/snapshots/enable_first__ae79afe767fed4b296c30e5d191360a3_fix.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  enable = true;
  initrd = {
    kernelModules = [ ];
    enable = true;
  };
}
---
