bin/tests/snapshots/enable_first__ae79afe767fed4b296c30e5d191360a3_lint_errfmt.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  enable = true;
  initrd = {
    kernelModules = [ ];
    enable = true;
  };
}
---
<temp_file_path>>5:5:W:30:[enable_first] `enable` should be the first attribute in this set
