bin/tests/snapshots/enable_first__ae79afe767fed4b296c30e5d191360a3_lint_json.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  enable = true;
  initrd = {
    kernelModules = [ ];
    enable = true;
  };
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "enable_blank_line",
      "note": "No blank line after `enable`",
      "code": 32,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 2,
              "column": 17
            }
          },
          "message": "a blank line should separate this from what follows",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 7,
                "column": 2
              }
            },
            "fix": "{\n  enable = true;\n\n  initrd = {\n    kernelModules = [ ];\n    enable = true;\n  };\n}"
          }
        }
      ]
    },
    {
      "name": "enable_first",
      "note": "`enable` is not the first attribute",
      "code": 30,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 5,
              "column": 5
            },
            "to": {
              "line": 5,
              "column": 19
            }
          },
          "message": "`enable` should be the first attribute in this set",
          "suggestion": {
            "at": {
              "from": {
                "line": 3,
                "column": 12
              },
              "to": {
                "line": 6,
                "column": 4
              }
            },
            "fix": "{\n    enable = true;\n    kernelModules = [ ];\n  }"
          }
        }
      ]
    }
  ]
}
