bin/tests/snapshots/enable_first__ae79afe767fed4b296c30e5d191360a3_lint_stderr.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  enable = true;
  initrd = {
    kernelModules = [ ];
    enable = true;
  };
}
---
[enable_first] Warning: `enable` is not the first attribute
   ╭─[ <temp_file_path>:5:5 ]
   │
 5 │     enable = true;
   │     ───────┬──────  
   │            ╰──────── enable should be the first attribute in this set
───╯
